<resources>
    <string name="app_name">Jobs</string>

    <!--action-->
    <string name="action_find">招聘</string>
    <string name="action_date">日程</string>
    <string name="action_discuss">论坛</string>
    <string name="action_person">个人</string>
    <string name="action_setting">设置</string>
    <string name="action_about">关于</string>
    <string name="action_search">搜索</string>
    
    <!--tip-->
    <string name="tip_delete_success">删除成功</string>
    <string name="tip_please_login">请先登录</string>

    <!--messsage-->
    <string name="err_net">网络连接超时,请检查网络后重试</string>
    <string name="err_auth">验证失败</string>
    <string name="err_send_auth">验证码发送失败</string>
    <string name="err_register">注册失败</string>
    <string name="err_login">登录失败</string>
    <string name="err_request">请求失败</string>
    
    <!--find-->
    <string name="find_career">宣讲会</string>
    <string name="find_employ">招聘会</string>
    <string name="find_fulltime">校招</string>

    <string name="save_success">收藏成功</string>
    <string name="save_fail">收藏失败</string>
    <string name="not_save_success">取消收藏成功</string>
    <string name="not_save_fail">取消收藏失败</string>

    <string name="mine_info">个人信息</string>
    <string name="mine_resume">简历制作</string>
    <string name="mine_follow">我的关注</string>
    <string name="mine_history">浏览历史</string>

    <string name="account_name">姓名</string>
    <string name="account_gender">性别</string>
    <string name="account_birth">出生年月</string>
    <string name="account_live">现居地</string>
    <string name="account_politic">籍贯</string>
    <string name="account_mobile">手机号</string>
    <string name="account_mail">邮箱</string>
    <string name="account_college">毕业院校</string>

    <string name="tv_company">北京中公教育科技股份有限公司</string>
    <string name="tv_time">时间:2016年5月22日14:30</string>
    <string name="tv_place">地点:华中师范大学就业处招聘大厅</string>

    <string name="username_error">username is error</string>
    <string name="password_error">password is error</string>
    
    <string name="setting_general">常规</string>
    <string name="setting_push">通知</string>
    <string name="setting_other">其他</string>
    <string name="setting_change_accout">切换账号</string>
    <string name="setting_change_theme">开启夜间模式</string>
    <string name="setting_logout">退出登录</string>
    <string name="setting_notify">开启通知</string>
    <string name="setting_clear_cache">清除缓存</string>

    <string name="key_theme">key_theme</string>
    <string name="key_notify">key_notify</string>
    <string name="key_cache">key_cache</string>
    <string name="key_account">key_account</string>
    <string name="key_logout">key_logout</string>
</resources>
