<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/setting_general">

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/key_theme"
        android:title="@string/setting_change_theme"/>


  </PreferenceCategory>

  <PreferenceCategory
      android:title="@string/setting_push">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/key_notify"
        android:title="@string/setting_notify"/>

  </PreferenceCategory>

  <PreferenceCategory
      android:title="@string/setting_other">

    <Preference
        android:key="@string/key_cache"
        android:title="@string/setting_clear_cache"/>

    <Preference
      android:key="@string/key_logout"
      android:layout="@layout/view_logout"
    />

  </PreferenceCategory>

</PreferenceScreen>