<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical">

    <include layout="@layout/view_toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_headview_height">

        <ImageView
            android:id="@+id/image_headview"
            android:layout_width="56dp"
            android:layout_centerVertical="true"
            android:layout_height="56dp"
            android:scaleType="fitXY"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:src="@drawable/cd"/>

        <TextView
            android:id="@+id/tv_name"
            tools:text="冯敏超"

            android:layout_toRightOf="@+id/image_headview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_place"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@+id/image_headview"
            android:layout_alignParentBottom="true"
            tools:text="华中师范"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_info"
        style="@style/mineTvStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_tv_height"
        android:drawableLeft="@drawable/ic_create_black_24dp"
        android:text="@string/mine_info"/>

    <TextView
        android:id="@+id/tv_resume"
        style="@style/mineTvStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_tv_height"
        android:drawableLeft="@drawable/ic_insert_drive_file_black_24dp"
        android:text="@string/mine_resume"/>

    <TextView
        android:id="@+id/tv_follow"
        style="@style/mineTvStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_tv_height"
        android:drawableLeft="@drawable/ic_grade_black_24dp"
        android:text="@string/mine_follow"/>

    <TextView
        android:id="@+id/tv_history"
        style="@style/mineTvStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_tv_height"
        android:drawableLeft="@drawable/ic_history_black_24dp"
        android:text="@string/mine_history"/>

</LinearLayout>