<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:background="#ffffff"
                android:elevation="4dp"
                android:orientation="vertical">

    <ImageView android:id="@+id/img_school_icon"
               android:layout_width="50dp"
               android:layout_height="50dp"
               android:layout_centerVertical="true"
               android:layout_marginLeft="8dp"
               android:src="@drawable/huashiicon"/>

    <TextView android:id="@+id/tv_company"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="4dp"
              android:layout_toRightOf="@+id/img_school_icon"
              android:text="@string/tv_company"
              android:textColor="#000000"
              android:textSize="16sp"/>

    <TextView android:id="@+id/tv_time"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@+id/tv_company"
              android:layout_marginLeft="4dp"
              android:layout_toRightOf="@+id/img_school_icon"
              android:text="@string/tv_time"/>

    <TextView android:id="@+id/tv_place"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentBottom="true"
              android:layout_marginBottom="4dp"
              android:layout_marginLeft="4dp"
              android:layout_toRightOf="@+id/img_school_icon"
              android:text="@string/tv_place"/>

    <ImageView android:layout_width="wrap_content"
               android:id="@+id/img_see"
               android:src="@drawable/ic_remove_red_eye_black_18dp"
               android:layout_alignParentRight="true"
               android:layout_marginTop="12dp"
               android:layout_marginRight="8dp"
               android:layout_height="wrap_content"/>

    <TextView android:layout_width="wrap_content"
              android:id="@+id/tv_see"
              android:text="66"
              android:layout_below="@+id/img_see"
              android:layout_alignParentRight="true"
              android:layout_marginRight="8dp"
              android:layout_height="wrap_content"/>

    <ImageView android:layout_width="wrap_content"
               android:id="@+id/img_star"
               android:src="@drawable/ic_star_border_black_18dp"
               android:layout_toLeftOf="@+id/img_see"
               android:layout_centerVertical="true"
               android:layout_marginRight="4dp"
               android:layout_height="wrap_content"/>
</RelativeLayout>